s3-proxy/s3-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-bucket
spec:
  type: ExternalName
  externalName: haris-089.s3-website.eu-central-1.amazonaws.com
  ports:
    - port: 80
      targetPort: 80
